syntax = "proto3";

package canvaschain.staking;

//! ========================= CanvasChain Symphony =============================
//!
//! File: staking.proto
//! Project: CanvasChain Symphony – staking micro-service definitions
//!
//! Purpose:
//!     gRPC & protocol-buffer contracts for the Proof-of-Inspiration (PoI)
//!     staking subsystem.  Messages here are consumed by the on-chain runtime
//!     (written in Rust) as well as by off-chain indexers, front-end gateways
//!     and other micro-services (e.g. governance, NFT-minting).
//!
//!  •  Covers bonding / unbonding funds, validator declarations,
//!     reward withdrawals and slash notifications.
//!  •  Designed for long-term binary compatibility ‑ never re-use field
//!     numbers!  When deprecating, mark the field with `reserved`.
//!
//! Copyright:
//!     © 2024 CanvasChain Labs.  Licensed under the Apache-2.0 license.
//! ===========================================================================

import "google/protobuf/timestamp.proto";

// -----------------------------------------------------------------------------
// Enumerations
// -----------------------------------------------------------------------------

// Human-readable status of a stake position.
enum StakeStatus {
  STAKE_STATUS_UNSPECIFIED = 0;
  STAKE_STATUS_BONDED      = 1;
  STAKE_STATUS_UNBONDING   = 2;
  STAKE_STATUS_UNBONDED    = 3;
}

// Type of staking event emitted on the event bus.
enum StakeEventType {
  STAKE_EVENT_TYPE_UNSPECIFIED = 0;
  STAKE_EVENT_TYPE_BONDED      = 1;
  STAKE_EVENT_TYPE_UNBONDED    = 2;
  STAKE_EVENT_TYPE_REWARD      = 3;
  STAKE_EVENT_TYPE_SLASH       = 4;
}

// -----------------------------------------------------------------------------
// Core value types
// -----------------------------------------------------------------------------

// Generic fungible token representation used throughout CanvasChain.
message Coin {
  string denom  = 1;  // E.g. "CCS", "USDC"
  uint64 amount = 2;  // Atomic units (no decimals)
}

// Active bonded stake – 1-to-1 between delegator & validator.
message Stake {
  string                       delegator   = 1; // Account ID
  string                       validator   = 2; // Validator operator address
  Coin                         amount      = 3; // Total bonded amount
  uint64                       shares      = 4; // Nominal shares (for reward calc)
  StakeStatus                  status      = 5; // Current life-cycle state
  google.protobuf.Timestamp    bonded_at   = 6; // Block time of last status change
}

// Tracks an in-flight unbonding request; becomes liquid once `completion_time` passes.
message UnbondingEntry {
  uint64                       id              = 1; // Unique per-validator counter
  Coin                         initial_balance = 2;
  Coin                         balance         = 3; // May be slashed
  google.protobuf.Timestamp    completion_time = 4;
}

// Aggregates all outstanding unbonding entries for a delegator/validator pair.
message UnbondingDelegation {
  string                       delegator   = 1;
  string                       validator   = 2;
  repeated UnbondingEntry      entries     = 3;
}

// Validator metadata – subset needed by clients.
message Validator {
  string address     = 1;
  string pub_key     = 2; // Bech32-encoded
  string description = 3; // Moniker / identity
  uint64 power       = 4; // Total bonded tokens (nominal)
  bool   jailed      = 5; // True if slashed/jailed
}

// Non-consensus event pushed to subscribers via server-streaming RPC.
message StakeEvent {
  google.protobuf.Timestamp time  = 1;
  StakeEventType            type  = 2;
  Stake                     stake = 3;
}

// -----------------------------------------------------------------------------
// Transaction RPC messages
// -----------------------------------------------------------------------------

message BondRequest {
  string delegator = 1;
  string validator = 2;
  Coin   amount    = 3;
}

message BondResponse {
  Stake stake = 1;
}

message UnbondRequest {
  string delegator = 1;
  string validator = 2;
  uint64 shares    = 3; // Shares to unbond
}

message UnbondResponse {
  UnbondingDelegation unbonding = 1;
}

message WithdrawRewardsRequest {
  string delegator = 1;
  string validator = 2;
}

message WithdrawRewardsResponse {
  repeated Coin rewards = 1;
}

// -----------------------------------------------------------------------------
// Query RPC messages
// -----------------------------------------------------------------------------

message GetDelegationsRequest {
  string delegator = 1;
}

message GetDelegationsResponse {
  repeated Stake delegations = 1;
}

message GetValidatorSetRequest {
  uint64 height = 1; // 0 = latest
}

message GetValidatorSetResponse {
  repeated Validator validators = 1;
}

// -----------------------------------------------------------------------------
// Event subscription
// -----------------------------------------------------------------------------

message SubscribeStakeEventsRequest {
  string                       subscriber_id = 1; // For server-side filtering
  uint64                       from_height   = 2; // Start point (inclusive)
}

// -----------------------------------------------------------------------------
// gRPC Service Definition
// -----------------------------------------------------------------------------

service StakingService {

  // Bond (delegate) tokens to a validator.
  rpc Bond(BondRequest) returns (BondResponse);

  // Begin unbonding previously delegated stake.
  rpc Unbond(UnbondRequest) returns (UnbondResponse);

  // Withdraw accumulated staking rewards.
  rpc WithdrawRewards(WithdrawRewardsRequest) returns (WithdrawRewardsResponse);

  // Fetch all active delegations for a given delegator.
  rpc GetDelegations(GetDelegationsRequest) returns (GetDelegationsResponse);

  // Returns the validator set at a particular block height.
  rpc GetValidatorSet(GetValidatorSetRequest) returns (GetValidatorSetResponse);

  // Subscribe to real-time staking events (server-side streaming).
  rpc SubscribeStakeEvents(SubscribeStakeEventsRequest) returns (stream StakeEvent);
}